--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase" >Services</h2>
-                    <h3 class="section-subheading text-muted">hubungi kami </h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row text-center">
                     <div onclick="window.location.href='https://www.ruparupa.com/ace/'" class="col-md-4" >
@@ -191,7 +191,7 @@
                         <h4 class="my-3" >E-commerce</h4>
                         <p class="text-muted"></p>
                     </div>
-                    <div onclick="window.location.href='https://www.acehardware.co.id/emagz/Vol14-Z1'" class="col-md-4" >
+                    <div onclick="window.location.href='https://bit.ly/SolusiAmanBeraktivitasACEGPS'" class="col-md-4" >
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
@@ -199,7 +199,7 @@
                         <h4 class="my-3">E-Brochure</h4>
                         <p class="text-muted"></p>
                     </div>
-                    <div onclick="window.location.href='https://www.ruparupa.com/ace/'" class="col-md-4" >
+                    <div onclick="window.location.href='https://www.acehardware.co.id/promo'" class="col-md-4" >
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
@@ -232,9 +232,9 @@
                     <li class="timeline-inverted">
                         <div onclick="window.location.href='https://g.page/ACEGPS?share'"class="timeline-image">
                             <h4>
-                                LOKASI
                                 <br />
-                                STORE
+                                LOKASI
+                               
                                </h4>
                         </div>
                     </li>
@@ -248,7 +248,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
@@ -289,12 +289,12 @@
                         <a class="btn btn-dark btn-social mx-2" href="https://bit.ly/Wa_ACEGPS"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/acegreenpramuka?igshid=gu76u70374"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="http://bit.ly/InstagramACEGPS"><i class="fab fa-instagram"></i></a>
 
                     </div>
                     <div class="col-lg-4 text-lg-right">
-                        <a class="mr-3" href="#!">Privacy Policy</a>
-                        <a href="#!">Terms of Use</a>
+                        <a class="mr-3" href="#!">02129624814</a>
+                        <a href="#!">Call Us</a>
                     </div>
                 </div>
             </div>
@@ -408,7 +408,7 @@
                                     <p>Hanya di ACE Hardware, Anda bisa mendapatkan berbagai perlengkapan untuk kebutuhan kendaraan Anda. Mulai dari aksesoris interior, eksterior, produk pembersih, oli, pelumas hingga alat-alat bantuan darurat saat di jalan, semuanya tersedia lengkap di sini.</p>
                                     <ul class="list-inline">
                                         
-                                  portfolioModal5  </ul>
+                                 </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close   
