--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
                         <h4 class="my-3">E-Brochure</h4>
                         <p class="text-muted"></p>
                     </div>
-                    <div onclick="window.location.href='https://www.acehardware.co.id/promo'" class="col-md-4" >
+                    <div onclick="window.location.href='https://www.acehardware.co.id/jadimember'" class="col-md-4" >
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Promo hari ini</h4>
+                        <h4 class="my-3">Jadi Member</h4>
                         <p class="text-muted"></p>
                     </div>
                 </div>
